<resources>
    <string name="app_name">TT(Typing Test)</string>
    <string name="action_settings">Settings</string>
    <string name="firstline">first line</string>
    <string name="secondline">second line</string>
    <string name="title_activity_splash">Splash</string>
    <string name="action_rateus">Rate the App</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_about">about</string>
    <string name="action_contact">Contact</string>
    <string name="register_msg">Compete Globally </string>
    <string name="welcome">Welcome !</string>
    <string name="app_v">1.0</string>
    <string name="action_log">Sign Out</string>
    <string name="about_d">app description</string>
    <string name="action_help">help</string>
    <string name="title_activity_feedback_and_contact">FeedbackAndContact</string>
    <string name="correct">correct</string>
    <string name="wrong">wrong</string>
    <string name="total">total</string>
    <string name="charcount">char count</string>
    <string name="speed">speed</string>
    <string name="acc">acc</string>
    <string name="title_activity_start_"></string>
    <string name="level">level 1</string>
    <string name="time">60 sec</string>
    <string-array name="level_str">
        <item>level 1</item>
        <item>level 2</item>
        <item>level 3</item>
        <item>level 4</item>
        <item>level 5</item>
        <item>level 6</item>
        <item>level 7</item>

    </string-array>
    <string-array name="time">
        <item>30 sec</item>
        <item>60 sec</item>
        <item>90 sec</item>
        <item>120 sec</item>
        <item>150 sec</item>
        <item>180 sec</item>
        <item>210 sec</item>
        <item>240 sec</item>
        <item>270 sec</item>
        <item>300 sec</item>

    </string-array>
    <string name="title_activity_reg_user">Reg_user</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="mpassword">Password</string>
    <string name="country">Place</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_Interstitial">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_m_login">Sign in</string>
    <string name="FACEBOOK_APP_ID">1797055323915228</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">1834c6c83fde7f8a371597197ca89206</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Nickname</string>
    <string name="action_done">Done</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

</resources>
