<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MTTActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_contact" android:title="@string/action_contact"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/log" android:title="@string/action_log"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/scoreboard" android:title="scoreboard"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/rate_us"
        android:icon="@drawable/ic_stars_white_36dp"
        android:title="@string/action_rateus"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/action_rateus"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline_white_36dp"
        android:title="@string/action_help"
        app:showAsAction="ifRoom"/>

</menu>
